--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,14 +13,18 @@
   "description": "",
   "dependencies": {
     "@swipe/shared": "^1.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.10",
